build.gradle: update jME to v3.7.0-stable